[package]
name = "tablr"
version = "0.1.0"
edition = "2024"
description = "A simple parquet file viewer"

[dependencies]
eframe = { version = "0.31.1", features = ["default"] }
egui_extras = "0.31.1"
polars = { version = "0.48.1", features = ["lazy", "parquet", "dtype-full"] }
rfd = "0.15.3"

[package.metadata.bundle]
identifier = "li.zimo.tablr"
